--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
+nav {
+    background-color: whitesmoke;
+    padding: 0px 200px 0px 200px;
+}
+
 body {
     background-image: url(../images/dot-grid/dot-grid.png);
+}
+
+#container {
+    margin-top: 100px;
+    max-width: 80%;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 0 10px 2px;
 }
