--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,22 +3,24 @@
     padding: 0px 200px 0px 200px;
 }
 
-#main{
-    flex: 1 0 auto;
-}
-
-#body {
+body {
     background-image: url(../images/dot-grid/dot-grid.png);
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
 }
 
 #container {
-    margin: 100px 0px 100px 0px;
+    margin-top: 165px;
+    margin-bottom: 165px;
     max-width: 80%;
     background-color: whitesmoke;
     border-radius: 10px;
     padding: 10px;
-    box-shadow: 0 0 10px 2px;
+    box-shadow: 0 0 100px 50px;
+}
+
+#footer {
+    background-color: black;
+}
+
+#footerLinks {
+    padding-right: 15px;
 }
