--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -3,6 +3,10 @@
     padding: 0px 200px 0px 200px;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 body {
     background-image: url(../images/email-pattern/email-pattern.png);
 }
