--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -3,19 +3,32 @@
     padding: 0px 200px 0px 200px;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 body {
     color: whitesmoke;
     background-image: url(../images/mosaic/mosaic.png);
 }
 
 #container {
-    margin-top: 165px;
-    margin-bottom: 165px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     max-width: 80%;
     background-color: black;
     border-radius: 10px;
     padding: 10px;
-    box-shadow: 0 0 200px 30px whitesmoke;
+    box-shadow: 0 0 80px 2px whitesmoke;
+}
+
+img {
+    height: 300px;
+    width: 665px;
+}
+
+#secPic {
+    width: 400px;
 }
 
 #footer {
