--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,18 +3,32 @@
     padding: 0px 200px 0px 200px;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
+#profilePic {
+    height: 300px;
+    width: 175px;
+}
+
 body {
     background-image: url(../images/dot-grid/dot-grid.png);
 }
 
 #container {
-    margin-top: 165px;
-    margin-bottom: 165px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     max-width: 80%;
     background-color: whitesmoke;
     border-radius: 10px;
     padding: 10px;
     box-shadow: 0 0 100px 50px;
+}
+
+p {
+    font-size: 20px;
+    float: none;
 }
 
 #footer {
